test_programs/compile_failure/tuple_mismatch/src/main.nr
fn main() {
    let (_x, _y) = (1, 2, 3);
}
